<resources>
    <string name="app_name" translatable="false">VES - Image Compare</string>
    <string name="app_name_short" translatable="false">vesIC</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="privacy_policy" translatable="false"><![CDATA[<h1 id=\"privacy-policy\">Privacy Policy</h1> <p>Last updated: April 05, 2024</p> <p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p> <p>We use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy. This Privacy Policy has been created with the help of the Privacy Policy Generator.</p> <br><br><h2 id=\"interpretation-and-definitions\">Interpretation and Definitions</h2> <br><h3 id=\"interpretation\">Interpretation</h3> <p>The words of which the initial letter is capitalized have meanings defined under the following conditions. The following definitions shall have the same meaning regardless of whether they appear in singular or in plural.</p> <br><h2 id=\"definitions\">Definitions</h2> <p>For the purposes of this Privacy Policy:</p> <p><b>Application</b> means the software program provided by the Company downloaded by You on any electronic device, named VES - Image Compare</p> <p><b>Company</b> (referred to as either \"the Company\", \"We\", \"Us\" or \"Our\" in this Agreement) refers to VES - Image Compare.</p> <p><b>Device</b> means any device that can access the Service such as a computer, a cellphone or a digital tablet.</p> <p><b>Personal Data</b> is any information that relates to an identified or identifiable individual.</p> <p><b>Service</b> refers to the Application.</p> <p><b>Usage Data</b> refers to data collected automatically, either generated by the use of the Service or from the Service infrastructure itself (for example, the duration of a page visit).</p> <p><b>You</b> means the individual accessing or using the Service, or the company, or other legal entity on behalf of which such individual is accessing or using the Service, as applicable.</p> <br><br><h2 id=\"collecting-and-using-your-personal-data-and-usage-data\">Collecting and Using Your Personal Data and Usage Data</h2> <br><h3 id=\"types-of-data-collected\">Types of Data Collected</h3> <br><h4 id=\"information-collected-while-using-the-application\">Information Collected while Using the Application</h4> <p>While using Our Application, in order to provide features of Our Application, We may collect, with Your prior permission:</p> <p>Pictures and other information from your Device\'s camera and photo library</p> <p>We use this information to provide features of Our Service. The information is simply stored on Your device. You can enable or disable access to this information at any time, through Your Device settings.</p> <br><h3 id=\"use-of-your-personal-data-and-usage-data\">Use of Your Personal Data and Usage Data</h3> <p>The Company may use Personal Data and Usage Data for the following purposes: To provide and maintain our Service.</p> <br><h3 id=\"retention-of-your-personal-data-and-usage-data\">Retention of Your Personal Data and Usage Data</h3> <p>The Company will retain Your Personal Data and Usage Data only for as long as is necessary for the purposes set out in this Privacy Policy. <b>You can delete Your Personal Data and Usage Data at any time through Your Device settings.</b></p> <br><h3 id=\"childrens-privacy\">Children\'s Privacy</h3> <p>Our Service does not address anyone under the age of 13. We do not knowingly collect personally identifiable information from anyone under the age of 13.</p> <br><h2 id=\"links-to-other-websites\">Links to Other Websites</h2> <p>Our Service may contain links to other websites that are not operated by Us. If You click on a third party link, You will be directed to that third party\'s site. We strongly advise You to review the Privacy Policy of every site You visit. We have no control over and assume no responsibility for the content, privacy policies or practices of any third party sites or services.</p> <br><h2 id=\"contact-us\">Contact Us</h2> <p>If you have any questions about this Privacy Policy, You can contact us:</p> <p>By email: <a href=\"mailto:vincentengelsoftware@gmail.com\">vincentengelsoftware@gmail.com</a></p>]]></string>
    <string name="first_image">First Image</string>
    <string name="second_image">Second Image</string>
    <string name="swap_images">Swap images</string>
    <string name="rotate_image_left">Rotate the left image</string>
    <string name="rotate_image_right">Rotate the right image</string>
    <string name="mirror_image_left">Mirror the left image</string>
    <string name="mirror_image_right">Mirror the right image</string>
    <string name="image_name">Image Name</string>
    <string name="resize">Resize</string>
    <string name="globally_enable_or_disable_linked_zoom">Enable or disable linked interactions</string>
    <string name="show_extensions_in_compare_modes">Show extensions in compare modes</string>
    <string name="compare">Compare</string>
    <string name="last_compare">Last Compare</string>
    <string name="share_image">Share Image</string>
    <string name="load_image_camera">Take Photo</string>
    <string name="load_image_gallery">Choose from Gallery</string>
    <string name="sync">Sync</string>
    <string name="background_image">Background image</string>
    <string name="front_image">Front image</string>
    <string name="hide_front_image">Hide front image</string>
    <string name="reset">Reset</string>
    <string name="overlay_cut_keep_image">Keep image</string>
    <string name="done">Done</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="unknown">Unknown</string>
    <string name="save">Save</string>
    <string name="number">Number</string>
    <string name="number_decimal">Decimal Number</string>
    <string name="version">Version</string>
    <string name="link_github_image_view_library" translatable="false"><a href="https://github.com/MikeOrtiz/TouchImageView">TouchImageView</a></string>
    <string name="link_github_project" translatable="false"><a href="https://github.com/VincentEngel/VES-Image-Compare">VES - Image Compare</a></string>
    <string name="github_project">GitHub Project</string>
    <string name="used_libraries">Used Libraries</string>
    <string name="link_app_icon" translatable="false"><a href="https://github.com/google/material-design-icons">Google - Material Design Icons</a></string>
    <string name="color_theme">Color Theme</string>
    <string name="link_color_theme" translatable="false"><a href="https://github.com/SimpleMobileTools/Simple-Calendar">Simple Calendar</a></string>
    <string name="info_text_view_inspiration">This app is heavily inspired from the App \"Ditto - Photo Comparer\"</string>
    <string name="link_ditto_photo_comparer" translatable="false"><a href="https://play.google.com/store/apps/details?id=com.sasiddiqui.ditto">Ditto - Photo Comparer</a></string>
    <string name="playstore" translatable="false">PlayStore</string>
    <string name="open_playstore">Open PlayStore</string>
    <string name="icon_sources">Icon Sources</string>
    <string name="theme">Theme</string>
    <string name="theme_system">System</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="select_compare_mode_title">Select Compare Mode</string>
    <string name="compare_mode_transparent">Slide Transparent</string>
    <string name="compare_mode_side_by_side">Side by Side</string>
    <string name="compare_mode_overlay_slide">Overlay Slide</string>
    <string name="compare_mode_overlay_tap">Overlay Tap</string>
    <string name="compare_mode_overlay_cut">Overlay Cut</string>
    <string name="compare_mode_overlay_touch">Touch Transparent</string>
    <string name="compare_mode_differences">Differences</string>
    <string name="overlay_touch_erase_toggle">Toggle erasing</string>
    <string name="resize_image_info_text_automatic">Automatically reduce image size in order to improve performance. Scale the image down to screen size while keeping its proportions</string>
    <string name="resize_image_info_text_original">Keep original image unchanged. May cause performance problems</string>
    <string name="resize_image_mode_custom">Custom</string>
    <string name="resize_image_mode_automatic">Automatic</string>
    <string name="resize_image_mode_original">Original</string>
    <string name="resize_image">Resize Image</string>
    <string name="resize_image_height_in_px">Height in px</string>
    <string name="resize_image_width_in_px">Width in px</string>
    <string name="settings_on_linking">Enable or Disable reset on linking zoom</string>
    <string name="settings_mirroring_natural_description">Mirror all interactions</string>
    <string name="settings_mirroring_strict_description">Enforce identical zoom and position</string>
    <string name="settings_mirroring_loose_description">Only mirror zoom</string>
    <string name="settings_reset_zoom">Reset Zoom on linking</string>
    <string name="settings_mirroring">Mirroring options</string>
    <string name="settings_reset_all_settings">Reset all Settings</string>
    <string name="user_settings">User settings</string>
    <string name="max_zoom">Max Zoom</string>
    <string name="min_zoom">Min Zoom</string>
    <string name="default_100">(default: 100)</string>
    <string name="default_1.0">(default: 1.0)</string>
    <string name="open_settings">Open Settings</string>
    <string name="settings_save_success">Successfully saved</string>
    <string name="settings_reset_success">Successfully reset all settings</string>
    <string name="settings_tap_hide_mode_description_invisible">Compare mode Tap hiding mode:\n\nInvisible makes the current image invisible to show the other image.</string>
    <string name="settings_tap_hide_mode_description_background">Compare mode Tap hiding mode:\n\nBackground makes the current image move to the back to show the other image.</string>
    <string name="settings_tap_hide_mode_invisible">Invisible</string>
    <string name="settings_tap_hide_mode_background">Move to background</string>
    <string name="settings_show_navigation_bar">Show Navigation bar</string>
    <string name="settings_show_navigation_bar_description">Show navigation bar when entering a compare mode</string>
    <string name="settings_differences_max_count">Max differences shown</string>
    <string name="settings_differences_max_count_default">(default: 10)</string>
    <string name="settings_differences_circle_color">Difference circle colour</string>
    <string name="settings_differences_circle_color_red">Red</string>
    <string name="settings_differences_circle_color_blue">Blue</string>
    <string name="settings_differences_circle_color_green">Green</string>
    <string name="explanation">Explanation</string>
    <string name="explanation_image_linking">Links both images. When you zoom in on one image, the other image automatically zooms in too.</string>
    <string name="explanation_swap_images">Swap images with each other.</string>
    <string name="explanation_enable_extensions">Enable details in the following CompareModes: Side-by-Side, Tap and Overlay Cut.</string>
    <string name="explanation_edit_image_size">Edit the size of an image before comparing it.</string>
    <string name="explanation_rotate_image">Rotate the image by 90 degrees.</string>
    <string name="switch_slide_direction">Switch slide direction</string>
    <string name="ask_for_review_positive">Open PlayStore</string>
</resources>