<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Activities.InfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/info_text_view_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/ves_image_compare"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/info_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/version" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:shrinkColumns="*">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/info_text_view_github_project"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            android:text="@string/github_project"
                            android:textSize="16sp" />
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/info_text_view_link_github_project"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="15dp"
                            android:paddingBottom="15dp"
                            android:text="@string/link_github_project"
                            android:textSize="16sp" />
                    </FrameLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/info_text_view_color_theme2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            android:text="@string/playstore"
                            android:textSize="16sp" />

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/info_btn_open_playstore"
                            style="@style/buttonStyles"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/open_playstore" />

                    </FrameLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/info_text_view_library"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            android:text="@string/used_libraries"
                            android:textSize="16sp" />
                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/info_text_view_link_library_subsampling_scale_image_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:paddingTop="15dp"
                            android:paddingBottom="15dp"
                            android:text="@string/link_github_image_view_library"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/info_text_view_link_library_metadata_extractor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:paddingTop="15dp"
                            android:paddingBottom="15dp"
                            android:text="@string/metadata_extractor"
                            android:textSize="16sp" />

                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/info_text_view_color_theme"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            android:text="@string/color_theme"
                            android:textSize="16sp" />
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/info_text_view_link_color_theme"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="15dp"
                            android:paddingBottom="15dp"
                            android:text="@string/link_color_theme"
                            android:textSize="16sp" />
                    </FrameLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/info_text_view_icon_sources"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            android:text="@string/icon_sources"
                            android:textSize="16sp" />
                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/info_text_view_link_google_material_icons"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:paddingTop="15dp"
                            android:paddingBottom="15dp"
                            android:text="@string/link_app_icon"
                            android:textSize="16sp" />

                    </LinearLayout>

                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/info_text_view_inspiration_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:text="@string/info_text_view_inspiration"
                        android:textSize="16sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/info_text_view_link_ditto_photo_comparer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:text="@string/link_ditto_photo_comparer"
                        android:textSize="16sp" />

                </TableRow>

            </TableLayout>

            <TextView
                android:id="@+id/info_text_view_privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:text="@string/privacy_policy"
                android:textAlignment="textStart" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>