<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/select_compare_mode_title"
                android:textSize="@dimen/title_text_size" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingHorizontal="12dp"
                android:paddingBottom="12dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/select_compare_mode_dialog_btn_side_by_side"
                        style="@style/buttonStyles"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:text="@string/compare_mode_side_by_side" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/select_compare_mode_dialog_btn_overlay_slide"
                        style="@style/buttonStyles"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:text="@string/compare_mode_overlay_slide" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/select_compare_mode_dialog_btn_overlay_tap"
                        style="@style/buttonStyles"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:text="@string/compare_mode_overlay_tap" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/select_compare_mode_dialog_btn_transparent"
                        style="@style/buttonStyles"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:text="@string/compare_mode_transparent" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/select_compare_mode_dialog_btn_overlay_cut"
                        style="@style/buttonStyles"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/compare_mode_overlay_cut"
                        android:textSize="@dimen/text_size" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/select_compare_mode_dialog_btn_metadata"
                        style="@style/buttonStyles"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:text="@string/compare_mode_metadata" />
                </TableRow>

            </TableLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>